syntax = "proto3";

option java_multiple_files= true;
option java_package = "proto.getUser.proto";
option java_outer_classname = "getUserProto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "user.proto";

message GetUserByUniqueFieldRequest {
    GetUserUniqueFields filterBy = 1;
    string value = 2;
}

message GetAllUsersRequest {
  User filter = 1;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string phone_number = 2;
  string password = 3;
  string last_name = 4;
  string first_name = 5;
  string role = 6;
  bool email_verified = 7;
  string email = 8;
}
enum GetUserUniqueFields{
  ID = 0;
  PHONE_NUMBER=1;
  EMAIL=2;
}